Table users {
  id int [pk, increment]
  email varchar [not null, unique]
  password_hash varchar [not null]
  role varchar [not null]
}

Table clients {
  id int [pk, increment]
  user_id int [not null, unique]
}

Table products {
  id int [pk, increment]
  name varchar [not null]
  price decimal(10,2) [not null]
  sku varchar(50) [not null, unique]
  description text
}

Table inventory {
  id int [pk, increment]
  product_id int [not null, unique]
  units int [not null, default: 0]
}

Table sales {
  id int [pk, increment]
  client_id int [not null]
  created_at datetime [not null]
}

Table sale_items {
  id int [pk, increment]
  sale_id int [not null]
  product_id int [not null]
  units int [not null]
  price decimal(10,2) [not null]
}

Ref: clients.user_id > users.id
Ref: inventory.product_id > products.id
Ref: sales.client_id > clients.id
Ref: sale_items.sale_id > sales.id
Ref: sale_items.product_id > products.id